# flowsql

./: .gitignore  CLAUDE.md  LICENSE  README.md  start_web.sh  test_frontend.sh
config/: flowsql.yml  gateway.yaml  gateway_without_scheduler.yaml
docs/: PLAN_framework.md  commands.md  design.md  design_database_channel.md  framework.md  frontend_verification.md  operator_editor_guide.md  operator_editor_implementation.md  stage1.md  stage2.md  stage2_step7_summary.md  stage3.md  test_expert_review.md  todo.md
docs/archive/: README.md  design_database_channel.md  stage1.md  stage2.md
src/: .clang-format  CMakeLists.txt  subjects.cmake
src/app/: CMakeLists.txt  main.cpp
src/bridge/: arrow_ipc_serializer.cpp  arrow_ipc_serializer.h  bridge_plugin.cpp  bridge_plugin.h  plugin_register.cpp  python_operator_bridge.cpp  python_operator_bridge.h  python_process_manager.cpp  python_process_manager.h
src/common/: block_buffer.h  block_mem.h  capture_cfg.h  defer.hpp  define.h  guid.h  int2type.h  iplugin.h  iquerier.hpp  launcher.h  launcher.hpp  loader.hpp  nic_mgr.h  option_loader.h  power.hpp  simple_launcher.hpp  toolkit.hpp  typedef.h
src/common/algo/: ahocorasick.hpp  bitmap.hpp  list.hpp  list_base.hpp  objects_pool.hpp  radixtree.hpp
src/common/ipc/: client.h  common.h  server.h
src/common/modularity/: iid.h  mbasic.h  modularity.h
src/common/network/: netaddress.h  netbase.h  packet.cpp  packet.h
src/common/reflection/: meta_maco.hpp  nameof.hpp  reflection.hpp
src/common/share_memory/: shm_client.h  shm_server.h  shm_typedef.h
src/common/threadsafe/: atomic.h  lock.h  thread.h  threadx.h
src/framework/: CMakeLists.txt  macros.h
src/framework/core/: channel_adapter.cpp  channel_adapter.h  dataframe.cpp  dataframe.h  dataframe_channel.cpp  dataframe_channel.h  pipeline.cpp  pipeline.h  plugin_registry.cpp  plugin_registry.h  service.cpp  service.h  sql_parser.cpp  sql_parser.h
src/framework/interfaces/: ibridge.h  ichannel.h  idata_entity.h  idatabase_channel.h  idatabase_factory.h  idataframe.h  idataframe_channel.h  ioperator.h
src/frontend/src/api/: index.js
src/frontend/src/views/: Channels.vue  Tasks.vue
src/plugins/example/: CMakeLists.txt  memory_channel.cpp  memory_channel.h  passthrough_operator.cpp  passthrough_operator.h  plugin_register.cpp
src/plugins/npi/: npi.cpp  npi.h
src/plugins/protocol/npi/: CMakeLists.txt  bitmapmatch.cpp  bitmapmatch.h  config.cpp  config.h  engine.cpp  engine.h  enumeratematch.cpp  enumeratematch.h  iprotocol.h  irecognizer.h  layer.cpp  layer.h  model.cpp  model.h  npi.cpp  npi.h  regexmatch.cpp  regexmatch.h
src/python/: requirements.txt  setup.py
src/python/flowsql/: __init__.py  __main__.py  arrow_codec.py  config.py  control_client.py  operator_base.py  operator_registry.py  worker.py
src/python/operators/: __init__.py  explore_chisquare.py
src/services/bridge/: CMakeLists.txt  bridge_plugin.cpp  bridge_plugin.h  plugin_register.cpp  python_operator_bridge.h
src/services/database/: CMakeLists.txt  connection_pool.h  database_channel.cpp  database_channel.h  database_plugin.cpp  database_plugin.h  idb_driver.h  plugin_register.cpp  relation_db_session.h
src/services/database/drivers/: mysql_driver.cpp  mysql_driver.h  sqlite_driver.cpp  sqlite_driver.h
src/services/gateway/: CMakeLists.txt  gateway_plugin.cpp  gateway_plugin.h  plugin_register.cpp
src/services/scheduler/: CMakeLists.txt  plugin_register.cpp  scheduler_plugin.cpp  scheduler_plugin.h
src/services/web/: CMakeLists.txt  web_plugin.cpp  web_plugin.h  web_plugin_register.cpp  web_server.cpp  web_server.h
src/services/web/static/: index.html
src/services/web/static/assets/: index-CssxHgO2.css  index-qQWgPKrT.js
src/tests/test_bridge/: CMakeLists.txt  main.cpp
src/tests/test_database/: CMakeLists.txt  main.cpp  test_clickhouse.cpp  test_database_manager.cpp  test_plugin_e2e.cpp  test_session_e2e.cpp
src/tests/test_framework/: CMakeLists.txt  main.cpp
src/tests/test_npi/: CMakeLists.txt  main.cpp
src/thirdparts/boost/: boost-config.cmake.ign
src/thirdparts/gflags/: gflags-config.cmake
src/thirdparts/glog/: glog-config.cmake
src/thirdparts/hyperscan/: hyperscan-config.cmake
src/thirdparts/rapidjson/: rapidjson-config.cmake
src/thirdparts/sqlite/: sqlite-config.cmake
src/thirdparts/yaml-cpp/: yaml-config.cmake
src/web/: CMakeLists.txt  main.cpp  web_server.cpp  web_server.h
src/web/db/: database.cpp  database.h
tasks/: lessons.md  product_backlog.md  todo.md
tasks/sprints/sprint1/: planning.md  retrospective.md  review.md
tasks/sprints/sprint2/: planning.md  retrospective.md  review.md
tasks/sprints/sprint3/: planning.md  retrospective.md  review.md
tasks/sprints/sprint4/: design.md  planning.md
tasks/sprints/sprint5/: retrospective.md  review.md
